--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,11 +23,11 @@
     <h1>Lista de contatos</h1>
     <h3><a href="cadastrarAgenda" class="waves-effect waves-light btn"><i class="material-icons left">add</i>Cadastrar Contato</a></h3>
     <div class="row">
-    <form class="col s6">
+    <form class="col s6" method="post">
       <div class="container">
         <div class="input-field col s6">
           <i class="material-icons prefix">search</i>
-          <input id="icon_prefix" type="text" class="validate" name="nome">
+          <input id="icon_prefix" type="text" class="validate" name="nome" method>
           <label for="icon_prefix">Pesquisar</label>
       </div>
     </form>
