--- a/src/main/resources/templates/formAgenda.html
+++ b/src/main/resources/templates/formAgenda.html
@@ -21,13 +21,97 @@
 <body>
     <h1>Adicionando contato</h1>
     <h3><a href="agenda" class="waves-effect waves-light btn"><i class="material-icons left">list</i>Lista de contatos</a></h3>
-    <form class="container" method="POST" action="">
+    <form class="container" method="POST" action="" >
         Nome:<input type="text" name="nome" value="">
         Telefone:<input type="text" name="telefone" value="">
-        Informacao:<input type="text" name="informacao" value="">
+        Email:<input type="text" name="email" value="">
+	    Cep:
+        <input name="cep" type="text" id="cep" value="" size="10" maxlength="9"
+               onblur="pesquisacep(this.value);" /></label><br />
+        Rua:
+        <input name="rua" type="text" id="rua" size="60" /></label><br />
+       Bairro:
+        <input name="bairro" type="text" id="bairro" size="40" /></label><br />
+        Cidade:
+        <input name="cidade" type="text" id="cidade" size="40" /></label><br />
+       Estado:
+        <input name="UF" type="text" id="uf" size="2" /></label><br />
+        IBGE:
+        <input name="ibge" type="text" id="ibge" size="8" /></label><br />
         <button type="submit" class="waves-effect waves-light btn">Salvar</button>
-        
     </form>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
+ <!-- Adicionando Javascript -->
+    <script type="text/javascript" >
+    
+    function limpa_formulário_cep() {
+            //Limpa valores do formulário de cep.
+            document.getElementById('rua').value=("");
+            document.getElementById('bairro').value=("");
+            document.getElementById('cidade').value=("");
+            document.getElementById('uf').value=("");
+            document.getElementById('ibge').value=("");
+    }
+
+    function meu_callback(conteudo) {
+        if (!("erro" in conteudo)) {
+            //Atualiza os campos com os valores.
+            document.getElementById('rua').value=(conteudo.logradouro);
+            document.getElementById('bairro').value=(conteudo.bairro);
+            document.getElementById('cidade').value=(conteudo.localidade);
+            document.getElementById('uf').value=(conteudo.uf);
+            document.getElementById('ibge').value=(conteudo.ibge);
+        } //end if.
+        else {
+            //CEP não Encontrado.
+            limpa_formulário_cep();
+            alert("CEP não encontrado.");
+        }
+    }
+        
+    function pesquisacep(valor) {
+
+        //Nova variável "cep" somente com dígitos.
+        var cep = valor.replace(/\D/g, '');
+
+        //Verifica se campo cep possui valor informado.
+        if (cep != "") {
+
+            //Expressão regular para validar o CEP.
+            var validacep = /^[0-9]{8}$/;
+
+            //Valida o formato do CEP.
+            if(validacep.test(cep)) {
+
+                //Preenche os campos com "..." enquanto consulta webservice.
+                document.getElementById('rua').value="...";
+                document.getElementById('bairro').value="...";
+                document.getElementById('cidade').value="...";
+                document.getElementById('uf').value="...";
+                document.getElementById('ibge').value="...";
+
+                //Cria um elemento javascript.
+                var script = document.createElement('script');
+
+                //Sincroniza com o callback.
+                script.src = '//viacep.com.br/ws/'+ cep + '/json/?callback=meu_callback';
+
+                //Insere script no documento e carrega o conteúdo.
+                document.body.appendChild(script);
+
+            } //end if.
+            else {
+                //cep é inválido.
+                limpa_formulário_cep();
+                alert("Formato de CEP inválido.");
+            }
+        } //end if.
+        else {
+            //cep sem valor, limpa formulário.
+            limpa_formulário_cep();
+        }
+    };
+
+    </script>
 </html>
