--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <h1>Lista de contatos</h1>
-    <h3><a href="cadastrarAgenda" class="waves-effect waves-light btn"><i class="material-icons left">add</i>Cadastrar Contato</a></h3>
+    <h3><a id="add" href="cadastrarAgenda" class="waves-effect waves-light btn"><i class="material-icons left">add</i>Cadastrar Contato</a></h3>
     <div class="row">
     <form class="col s6" method="post">
       <div class="container">
